# oysterAV

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SECURITY.md  cliff.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  runtime.yml  scorecard.yml
branding/: README.md
docs/adr/: 001-orchestrator-not-engine.md  002-cli-first-gui-is-client.md  003-pack-tier-policy.md  004-pack-runtime-delivery.md  005-cli-production-phase.md  006-dependency-scope.md  007-gui-remapping-phase.md  008-clamav-host-cocontrol.md  009-privilege-concert.md  README.md
docs/cli/: clamav-yara.md  gui-contract.md  pack-commands.md  reference.md  rpc-schema.md
docs/packaging/: release.md
docs/security/: full-surface-audit-2026-07-23.md  hardening-audit-2026-07.md
docs/user-guide/: clamonacc-prevention.md  getting-started.md
oyst_cli/: __init__.py  confirm.py  main.py  options.py  output.py  progress.py
oyst_cli/commands/: audit_cmd.py  auth_cmd.py  config_cmd.py  desktop_cmd.py  doctor.py  install_helper_cmd.py  job_cmd.py  maintenance.py  news_cmd.py  pack_install_cmd.py  packs.py  quarantine.py  runtime_cmd.py  scan.py  schedule_cmd.py  services_cmd.py  setup_cmd.py  status.py  updates_cmd.py  virusevent_cmd.py
oyst_core/: __init__.py  audit.py  client.py  client_api.py  config.py  config_access.py  config_io.py  config_models.py  desktop_util.py  doctor_cache.py  events.py  events_history.py  events_jobs.py  finding_status.py  health.py  history_actions.py  history_export.py  logging_util.py  maintenance.py  models.py  orchestrator.py  orchestrator_helpers.py  orchestrator_scan_concert.py  pack_install.py  pack_jobs.py  pack_sources.py  quarantine.py  quarantine_guards.py  registry.py  rpc_auth.py  rpc_errors.py  rpc_io.py  runtime_full_bootstrap.py  scan_excludes.py  schedule_linger.py  schedule_time.py  schedule_units.py  schedule_util.py  schedule_validate.py  security_news.py  (+12 more)
oyst_core/packs/: __init__.py  base.py  chkrootkit.py  clamav.py  clamd_ensure.py  clamd_onaccess.py  clamonacc.py  fail2ban.py  fangfrisch.py  firewall.py  firewall_ops.py  freshclam.py  lynis.py  maldet.py  maldet_parse.py  rkhunter.py  rkhunter_overlay.py  (+5 more)
oysterav/: __init__.py  main.py
scripts/: build_flatpak.sh  build_native_packages.sh  build_runtime.sh  check.sh  check_loc.py  loc_allowlist.json  render_arch_pkgbuild.sh  smoke-cli.sh  sync_version.py
tests/: conftest.py
(+200 files in other folders)
