[project]
name = "oysterav"
version = "0.1.0"
description = "Linux security orchestrator: oyst-cli backend + oysterAV GUI"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.12"
authors = [{ name = "oysterAV contributors" }]
keywords = ["security", "antivirus", "linux", "clamav", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/asafelobotomy/oysterAV"
Repository = "https://github.com/asafelobotomy/oysterAV"
Issues = "https://github.com/asafelobotomy/oysterAV/issues"

[project.optional-dependencies]
gui = ["PyGObject>=3.48.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.11.0",
    "ruff>=0.6.0",
]
all = ["oysterav[gui,dev]"]

[project.scripts]
oyst-cli = "oyst_cli.main:main"
oysterav = "oysterav.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["oyst_core", "oyst_cli", "oysterav"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q --tb=short"
markers = [
    "gui: requires PyGObject (gi); skipped when gui extra is not installed",
]

[tool.coverage.run]
source = ["oyst_core", "oyst_cli"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 58

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"oysterav/gui/**/*.py" = ["E402", "I001"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
packages = ["oyst_core", "oyst_cli", "oysterav"]

[[tool.mypy.overrides]]
module = ["gi.*", "gi.repository.*"]
ignore_missing_imports = true

[tool.hatch.envs.default.scripts]
check = "scripts/check.sh"
format = "ruff format oyst_core oyst_cli oysterav tests"
